--- a/src/components/ThemesCircles/ThemesCircles.module.scss
+++ b/src/components/ThemesCircles/ThemesCircles.module.scss
@@ -1,15 +1,25 @@
 .ThemesCircles {
-    width: 100%;
-    height: 800px;
-    
-    .circle {
-        fill: none;
-        stroke: #fff;
-    }
+  width: 100%;
+  height: 100%;
 
-    .label{
-        fill: #fff;
-        alignment-baseline: middle;
-        text-anchor: middle;
-    }
+  .circle {
+    fill: var(--dark-cs);
+    stroke: #fff;
+    stroke-opacity: 0.5;
+    cursor: pointer;
+    transition: fill var(--transition);
+  }
+
+  .circle:hover {
+    fill: #fff;
+  }
+
+  .circle:hover + rect {
+    fill: #fff;
+    stroke: #fff;
+  }
+
+  .circle:hover + rect + text {
+    fill: var(--dark-cs);
+  }
 }
