--- a/src/pages/Themes/Themes.module.scss
+++ b/src/pages/Themes/Themes.module.scss
@@ -1,16 +1,53 @@
 .themesContainer {
-    height: 100%;
-    position: relative;
-    padding-top: calc(var(--menu-height) + 15px);
-    color: white;
-    h1 {
-      font-weight: normal;
-    }
-  
-    p {
-      font-size: 1.25rem;
-    }
+  height: 100%;
+  position: relative;
+  padding-top: calc(var(--menu-height) + 15px);
+  color: white;
+  h1 {
+    font-weight: normal;
   }
-  
-  
-  
+}
+
+.pageText {
+  p {
+    font-size: 1.25rem;
+  }
+}
+
+.storiesTitle {
+  text-transform: uppercase;
+  color: var(--red-cs);
+  font-weight: normal;
+  margin-bottom: 15px;
+  letter-spacing: 1px;
+}
+
+.storyTitle {
+  margin: 0;
+  font-family: "Inter", sans-serif;
+  font-size: 1.125rem;
+  line-height: 1.2;
+  padding-left: 15px;
+}
+
+.plus {
+  color: var(--red-cs);
+}
+
+.link {
+  color: white;
+  text-decoration: none;
+}
+
+.link:hover {
+  color: white;
+}
+
+.rowFill {
+  flex: 1 1 1px;
+}
+
+.storiesScroll {
+  flex: 1 1 1px;
+  overflow-y: scroll;
+}
