--- a/src/components/Menu/Menu.module.scss
+++ b/src/components/Menu/Menu.module.scss
@@ -33,7 +33,7 @@
 }
 
 .menuButtonsContainer {
-  position: absolute;
+  position: fixed;
   top: var(--menu-height);
   width: 100%;
   z-index: 998;
