--- a/src/components/Menu/Menu.module.scss
+++ b/src/components/Menu/Menu.module.scss
@@ -51,6 +51,11 @@
   transform: translateY(0%);
 }
 
+.menuButtonsContainer.open.light {
+  background-color: rgba(255, 255, 255, 0.85);
+  transform: translateY(0%);
+}
+
 .menuButtons {
   a {
     font-family: "Inter", sans-serif;
@@ -70,5 +75,16 @@
   a:last-of-type {
     font-family: "MessinaSerifWeb", serif;
     font-style: italic;
+  }
+}
+
+.light .menuButtons {
+  a {
+    color: var(--dark-cs);
+  }
+
+  a:hover {
+    color: var(--dark-cs);
+    border-bottom: 2px solid var(--dark-cs);
   }
 }
