--- a/src/pages/Themes/Themes.module.scss
+++ b/src/pages/Themes/Themes.module.scss
@@ -30,6 +30,13 @@
   padding-left: 15px;
 }
 
+.reset {
+  font-family: "Inter", sans-serif;
+  cursor: pointer;
+  text-decoration: underline;
+  margin-left: auto;
+}
+
 .plus {
   color: var(--red-cs);
 }
