--- a/src/pages/Story/Story.module.scss
+++ b/src/pages/Story/Story.module.scss
@@ -1,58 +1,58 @@
 .storyContainer {
-    height: 100%;
-    color: black;
-    background-color: white;
-    display: flex;
-    flex-direction: column;
-
-    position: relative;
-    padding-top: calc(var(--menu-height));
-
-    
-    // color: black;
-    // background-color: white;
-    // h1, h2 {
-    //   font-weight: normal;
-    // }
-  
-    // p {
-    //   font-size: 1.25rem;
-    // }
-
+  height: 100%;
+  color: var(--dark-cs);
+  background-color: white;
+  display: flex;
+  flex-direction: column;
+  position: relative;
+  padding-top: calc(var(--menu-height));
 }
 
+.rowFill {
+  flex: 1 1 1px;
+}
 
 .titleContainer {
-    border-bottom: solid #ccc 1px;
-    border-top: solid #666 1px;
-    position: sticky;
-    top: calc(var(--menu-height));
+  padding: 15px 0;
+  border-bottom: solid #d0d0d0 1px;
+
+  h2 {
+    font-family: "MessinaSerifWeb", serif;
+    font-size: 2.25rem;
+    font-weight: normal;
+  }
 }
 
 .storyTag {
-    background: #C82727;
-    color: #fff;
-    padding: 6px 8px;
-    font-size: 14px;
-    border-radius: 100px;
-    margin: 4px;
+  background: var(--red-cs);
+  font-family: "Inter", sans-serif;
+  font-size: 0.875rem;
+  text-transform: capitalize;
+  color: #fff;
+  display: inline-flex;
+  align-items: center;
+  padding: 6px 12px;
+  border-radius: 100px;
+  margin-right: 5px;
 }
 
 .contentContainer {
-    display: flex;
-    flex-direction: row;
-    flex: 1;
-    position: relative;
-    overflow: hidden;
-    
+  display: flex;
+  flex-direction: column;
+  // height: 100%;
+  flex: 1 1 1px;
 }
 
 .paragraphs {
-    flex:1;
-    padding-top: 20px;
-    padding-right: 30px;
-    padding-bottom: 20%;
-    overflow-y: auto;
+  flex: 1 1 1px;
+  padding-top: 20px;
+  padding-bottom: 20%;
+  overflow-y: auto;
+
+  p {
+    font-size: 1.5rem;
+    text-indent: 30px;
+  }
 }
 
 .dots {
@@ -61,27 +61,27 @@
   background: #fff;
   position: relative;
   overflow-y: auto;
+  flex: 1 1 1px;
 
   .dotsRect {
-      height: 60px;
-      background: #ccc;
-      margin: 4px 0;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
+    height: 60px;
+    background: #ccc;
+    margin: 4px 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 
-      .dot {
-          width: 8px;
-          height: 8px;
-          border-radius: 10px;
-          margin: 2px;
-          background: #C82727;
-      }
+    .dot {
+      width: 8px;
+      height: 8px;
+      border-radius: 10px;
+      margin: 2px;
+      background: #c82727;
+    }
   }
- 
 }
 .attachments {
- padding-left: 30px;
- flex:1;
+  padding-left: 30px;
+  flex: 1;
 }
