--- a/src/components/Menu/Menu.module.scss
+++ b/src/components/Menu/Menu.module.scss
@@ -10,7 +10,7 @@
 }
 
 .menuContainer.light {
-  border-bottom: 1px solid var(--dark-cs);
+  border-bottom: 1px solid #d0d0d0;
 }
 
 .menuContainer.open {
@@ -55,7 +55,7 @@
 }
 
 .menuButtonsContainer.light {
-  border-bottom: 1px solid var(--dark-cs);
+  border-bottom: 1px solid #d0d0d0;
 }
 
 .menuButtonsContainer.open {
