--- a/src/pages/Story/Story.module.scss
+++ b/src/pages/Story/Story.module.scss
@@ -20,6 +20,8 @@
     font-family: "MessinaSerifWeb", serif;
     font-size: 2.25rem;
     font-weight: normal;
+    display: flex;
+    align-items: center;
   }
 }
 
@@ -82,6 +84,6 @@
   }
 }
 .attachments {
-  padding-left: 30px;
-  flex: 1;
+  overflow-y: auto;
+  flex: 1 1 1px;
 }
