style items on story

--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -78,6 +78,7 @@
 :root {
   --dark-cs: #101012;
   --red-cs: #c82727;
+  --gray-cs: #d0d0d0;
   --transition: 0.3s ease-in-out;
   --menu-height: 60px;
 }
