--- a/src/pages/Story/Story.module.scss
+++ b/src/pages/Story/Story.module.scss
@@ -58,22 +58,27 @@
 }
 
 .dots {
-  width: 22px;
+  width: 100%;
   padding-top: 20px;
   background: #fff;
   position: relative;
   overflow-y: auto;
   flex: 1 1 1px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 
   .dotsRect {
-    height: 60px;
+    width: 22px;
+    min-height: 60px;
     background: #ccc;
     margin: 4px 0;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-
+    cursor: pointer;
+    transition: opacity var(--transition);
     .dot {
       width: 8px;
       height: 8px;
@@ -86,5 +91,5 @@
 .attachments {
   overflow-y: auto;
   flex: 1 1 1px;
-  padding-top: 20px;
+  padding: 20px 0;
 }
