--- a/src/pages/Camp/Camp.module.scss
+++ b/src/pages/Camp/Camp.module.scss
@@ -10,6 +10,11 @@
   position: relative;
 }
 
+.iconsContainer {
+  border-bottom: 1px solid rgba(255, 255, 255, 0.5);
+  margin-bottom: 25px;
+}
+
 .title {
   font-weight: normal;
   text-transform: capitalize;
