--- a/src/pages/Icon/Icon.module.scss
+++ b/src/pages/Icon/Icon.module.scss
@@ -1,11 +1,63 @@
 .iconContainer {
-    height: 100%;
-    color: var(--dark-cs);
-    background-color: white;
-    display: flex;
-    flex-direction: column;
-    position: relative;
+  height: 100%;
+  width: 100%;
+  padding-top: 50px;
+  color: var(--dark-cs);
+  background-color: white;
 }
-  
-  
-  
+
+.rowFill {
+  flex: 1 1 1px;
+}
+
+.title {
+  font-family: "MessinaSerifWeb", serif;
+  font-weight: normal;
+  font-size: 3rem;
+}
+
+.subtitle {
+  font-weight: normal;
+  margin: 0;
+}
+
+.circleButton {
+  width: 50px;
+  height: 50px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 100%;
+  border: 1px solid black;
+  color: black;
+}
+
+.circleButton:hover {
+  color: black;
+}
+
+.metadata {
+  text-transform: uppercase;
+  color: var(--red-cs);
+  font-weight: normal;
+  margin-bottom: 5px;
+  letter-spacing: 1px;
+}
+
+.descriptionContainer {
+  flex: 1 1 1px;
+  overflow-y: scroll;
+  margin: 15px 0;
+}
+
+.description {
+  font-size: 1.3rem;
+  line-height: 1.3;
+  text-indent: 30px;
+}
+
+.imageContainer {
+  max-height: 60%;
+  margin-bottom: 15px;
+  overflow: hidden;
+}
