--- a/src/components/FileViewer/FileViewer.module.scss
+++ b/src/components/FileViewer/FileViewer.module.scss
@@ -4,3 +4,14 @@
   object-fit: contain;
   object-position: left;
 }
+
+.player-wrapper {
+  position: relative;
+  padding-top: 56.25%; /* Player ratio: 100 / (1280 / 720) */
+}
+
+.react-player {
+  position: absolute;
+  top: 0;
+  left: 0;
+}
