--- a/src/components/FileViewer/FileViewer.module.scss
+++ b/src/components/FileViewer/FileViewer.module.scss
@@ -5,12 +5,12 @@
   object-position: left;
 }
 
-.player-wrapper {
+.playerWrapper {
   position: relative;
   padding-top: 56.25%; /* Player ratio: 100 / (1280 / 720) */
 }
 
-.react-player {
+.reactPlayer {
   position: absolute;
   top: 0;
   left: 0;
