--- a/src/components/ZoomAndPanMedia/ZoomAndPanMedia.module.scss
+++ b/src/components/ZoomAndPanMedia/ZoomAndPanMedia.module.scss
@@ -8,7 +8,7 @@
   position: relative;
   .zoom-and-pan-media-container {
     flex: 1 1 0;
-    overflow: visible;
+    overflow: hidden;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -33,6 +33,6 @@
 
 .controls {
   position: absolute;
-  top: 15px;
+  top: 30px;
   right: 15px;
 }
