--- a/src/components/FileViewer/FileViewer.module.scss
+++ b/src/components/FileViewer/FileViewer.module.scss
@@ -6,12 +6,12 @@
 }
 
 .playerWrapper {
-  position: relative;
-  padding-top: 56.25%; /* Player ratio: 100 / (1280 / 720) */
+  height: 100%;
+  flex: 1 1;
+  overflow: hidden;
+  padding: 15px 0;
 }
 
 .reactPlayer {
-  position: absolute;
-  top: 0;
-  left: 0;
+  background-color: black;
 }
