--- a/src/components/TimelineIconsCamp/TimelineIconsCamp.module.scss
+++ b/src/components/TimelineIconsCamp/TimelineIconsCamp.module.scss
@@ -24,9 +24,23 @@ $icons-width: 56px;
   width: $icons-width;
   object-fit: cover;
   transition: border-radius var(--transition);
+  border: 1px solid black;
 }
 
-.image:hover {
+.itemFallback {
+  border-radius: 100%;
+  height: $icons-width;
+  width: $icons-width;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: white;
+  transition: border-radius var(--transition);
+  border: 1px solid black;
+}
+
+.image:hover,
+.itemFallback:hover {
   border-radius: 0%;
 }
 
