--- a/src/components/StoryItem/StoryItem.module.scss
+++ b/src/components/StoryItem/StoryItem.module.scss
@@ -34,6 +34,11 @@
   font-family: "Inter", sans-serif;
   margin-bottom: 0;
   font-size: 0.875rem;
+
+  a {
+    color: black;
+    text-decoration: underline;
+  }
 }
 
 .link {
