--- a/src/pages/Intro/Intro.module.scss
+++ b/src/pages/Intro/Intro.module.scss
@@ -14,6 +14,27 @@
   justify-content: flex-end;
 }
 
+.introStep {
+  color: white;
+  text-align: center;
+  p {
+    width: 50%;
+    font-size: 1.75rem;
+    margin: auto;
+  }
+}
+
+.svgContainer {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  height: 100%;
+}
+
+.carouselItem {
+  height: 100%;
+}
+
 .nextButton {
   align-self: center;
   border-radius: 999px;
