--- a/src/pages/Item/Item.module.scss
+++ b/src/pages/Item/Item.module.scss
@@ -56,3 +56,24 @@
 
 .metadataContainer {
 }
+
+.link {
+  color: black;
+  text-decoration: none;
+}
+
+.link:hover {
+  color: black;
+}
+
+.plus {
+  color: var(--red-cs);
+}
+
+.storyTitle {
+  margin: 0;
+  font-family: "Inter", sans-serif;
+  font-size: 1.125rem;
+  line-height: 1.2;
+  padding-left: 15px;
+}
