--- a/src/components/StoryItem/StoryItem.module.scss
+++ b/src/components/StoryItem/StoryItem.module.scss
@@ -63,3 +63,36 @@
   margin-left: 0.25rem;
   font-size: 0.875rem;
 }
+
+.linked {
+  flex: 0 0 50%;
+  max-width: 50%;
+}
+
+.metadata {
+  color: var(--red-cs);
+  font-weight: normal;
+  margin-bottom: 5px;
+  letter-spacing: 1px;
+}
+
+.plus {
+  color: var(--red-cs);
+}
+
+.storyTitle {
+  margin: 0;
+  font-family: "Inter", sans-serif;
+  font-size: 1.125rem;
+  line-height: 1.2;
+  padding-left: 15px;
+}
+
+.linkStory {
+  color: black;
+  text-decoration: none;
+}
+
+.linkStory:hover {
+  color: black;
+}
