--- a/src/pages/Icon/Icon.module.scss
+++ b/src/pages/Icon/Icon.module.scss
@@ -67,3 +67,28 @@
   margin-bottom: 15px;
   display: flex;
 }
+
+.storylinesContainer {
+  margin-bottom: 20px;
+}
+
+.link {
+  color: black;
+  text-decoration: none;
+}
+
+.link:hover {
+  color: black;
+}
+
+.plus {
+  color: var(--red-cs);
+}
+
+.storyTitle {
+  margin: 0;
+  font-family: "Inter", sans-serif;
+  font-size: 1.125rem;
+  line-height: 1.2;
+  padding-left: 15px;
+}
