--- a/src/pages/Intro/Intro.module.scss
+++ b/src/pages/Intro/Intro.module.scss
@@ -8,7 +8,7 @@
 
 .top {
   width: 100%;
-  height: 60%;
+  height: 65%;
   display: flex;
   flex-direction: column;
   justify-content: flex-end;
@@ -20,7 +20,8 @@
   p {
     width: 50%;
     font-size: 1.75rem;
-    margin: auto;
+    margin-left: auto;
+    margin-right: auto;
   }
 }
 
@@ -45,6 +46,7 @@
   align-items: center;
   justify-content: center;
   opacity: 0;
+  cursor: pointer;
   animation: fillingHtml 1s linear 10s forwards;
 }
 
