minor on camp maps

--- a/src/pages/Camp/Camp.module.scss
+++ b/src/pages/Camp/Camp.module.scss
@@ -32,6 +32,11 @@
   padding-bottom: 15px;
 }
 
+.descriptionContainer {
+  max-height: 300px;
+  overflow-y: scroll;
+}
+
 .description {
   font-size: 1.25rem;
 }
