--- a/src/components/Menu/Menu.module.scss
+++ b/src/components/Menu/Menu.module.scss
@@ -84,7 +84,7 @@
   }
 
   a:last-of-type {
-    font-family: "MessinaSerifWeb", serif;
+    font-family: "Besley", serif;
     font-style: italic;
   }
 }
