--- a/src/pages/Item/Item.module.scss
+++ b/src/pages/Item/Item.module.scss
@@ -30,7 +30,7 @@
 }
 
 .title {
-  font-family: "MessinaSerifWeb", serif;
+  font-family: "Besley", serif;
   font-weight: normal;
   font-size: 3rem;
   margin: 0;
