--- a/src/style/_variables.scss
+++ b/src/style/_variables.scss
@@ -1,5 +1,5 @@
-$font-family-sans-serif: "MessinaSerifWeb", -apple-system, BlinkMacSystemFont,
-  "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji",
+$font-family-sans-serif: "Besley", -apple-system, BlinkMacSystemFont, "Segoe UI",
+  Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji",
   "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji" !default;
 
 $headings-font-family: "Inter", sans-serif;
