--- a/src/pages/Icon/Icon.module.scss
+++ b/src/pages/Icon/Icon.module.scss
@@ -11,7 +11,7 @@
 }
 
 .title {
-  font-family: "MessinaSerifWeb", serif;
+  font-family: "Besley", serif;
   font-weight: normal;
   font-size: 3rem;
 }
