--- a/src/pages/Story/Story.module.scss
+++ b/src/pages/Story/Story.module.scss
@@ -17,7 +17,7 @@
   border-bottom: solid #d0d0d0 1px;
 
   h2 {
-    font-family: "MessinaSerifWeb", serif;
+    font-family: "Besley", serif;
     font-size: 2.25rem;
     font-weight: normal;
     display: flex;
