--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -1,4 +1,5 @@
 @import url("https://rsms.me/inter/inter.css");
+@import url("https://indestructibletype.com/fonts/Besley.css");
 
 @font-face {
   font-family: "CeraStencilPRO";
@@ -18,58 +19,6 @@
     url("./fonts/CeraStencilPRO-Bold.ttf") format("truetype");
   font-weight: bold;
   font-style: normal;
-}
-
-@font-face {
-  font-family: "MessinaSerifWeb";
-  src: url("./fonts/MessinaSerifTrialWeb-Bold.eot");
-  src: url("./fonts/MessinaSerifTrialWeb-Bold.eot?#iefix")
-      format("embedded-opentype"),
-    url("./fonts/MessinaSerifTrialWeb-Bold.woff2") format("woff2"),
-    url("./fonts/MessinaSerifTrialWeb-Bold.woff") format("woff");
-  font-weight: 700;
-  font-style: normal;
-  font-stretch: normal;
-  unicode-range: U+000D-FB04;
-}
-
-@font-face {
-  font-family: "MessinaSerifWeb";
-  src: url("./fonts/MessinaSerifTrialWeb-BoldItalic.eot");
-  src: url("./fonts/MessinaSerifTrialWeb-BoldItalic.eot?#iefix")
-      format("embedded-opentype"),
-    url("./fonts/MessinaSerifTrialWeb-BoldItalic.woff2") format("woff2"),
-    url("./fonts/MessinaSerifTrialWeb-BoldItalic.woff") format("woff");
-  font-weight: 700;
-  font-style: normal;
-  font-stretch: normal;
-  unicode-range: U+000D-FB04;
-}
-
-@font-face {
-  font-family: "MessinaSerifWeb";
-  src: url("./fonts/MessinaSerifTrialWeb-Regular.eot");
-  src: url("./fonts/MessinaSerifTrialWeb-Regular.eot?#iefix")
-      format("embedded-opentype"),
-    url("./fonts/MessinaSerifTrialWeb-Regular.woff2") format("woff2"),
-    url("./fonts/MessinaSerifTrialWeb-Regular.woff") format("woff");
-  font-weight: 400;
-  font-style: normal;
-  font-stretch: normal;
-  unicode-range: U+000D-FB04;
-}
-
-@font-face {
-  font-family: "MessinaSerifWeb";
-  src: url("./fonts/MessinaSerifTrialWeb-RegularItalic.eot");
-  src: url("./fonts/MessinaSerifTrialWeb-RegularItalic.eot?#iefix")
-      format("embedded-opentype"),
-    url("./fonts/MessinaSerifTrialWeb-RegularItalic.woff2") format("woff2"),
-    url("./fonts/MessinaSerifTrialWeb-RegularItalic.woff") format("woff");
-  font-weight: 400;
-  font-style: italic;
-  font-stretch: normal;
-  unicode-range: U+000D-FB04;
 }
 
 @import "variables";
