--- a/src/pages/Intro/Intro.module.scss
+++ b/src/pages/Intro/Intro.module.scss
@@ -16,12 +16,15 @@
 
 .introStep {
   color: white;
-  text-align: center;
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  height: 100%;
   p {
     width: 50%;
     font-size: 1.75rem;
-    margin-left: auto;
-    margin-right: auto;
+    text-align: center;
   }
 }
 
