--- a/src/pages/Story/Story.module.scss
+++ b/src/pages/Story/Story.module.scss
@@ -53,7 +53,8 @@
 .paragraphs {
   flex: 1 1 1px;
   padding-top: 20px;
-  padding-bottom: 20%;
+  //padding-bottom: 20%;
+  padding-bottom: 50%;
   overflow-y: auto;
 
   p {
