--- a/src/pages/Story/Story.module.scss
+++ b/src/pages/Story/Story.module.scss
@@ -22,6 +22,7 @@
     font-weight: normal;
     display: flex;
     align-items: center;
+    margin: 8px 0;
   }
 
   .campLink {
@@ -34,22 +35,43 @@
   }
 }
 
+.vertLabel {
+  position: absolute;
+  top: 22px;
+  left: 8px;
+  z-index: 1;
+  transform: rotate(-90deg) translateX(-100%);
+  transform-origin: top left;
+  opacity: 0.5;
+
+  h6 {
+    color: var(--red-cs);
+    font-weight: normal;
+    letter-spacing: 1px;
+    text-transform: uppercase;
+    font-size: 0.875rem;
+    margin: 0;
+  }
+}
+
 .storyTag {
-  background: var(--red-cs);
+  background: white;
   font-family: "Inter", sans-serif;
   font-size: 0.875rem;
   text-transform: capitalize;
-  color: #fff;
+  color: var(--red-cs);
   display: inline-flex;
   align-items: center;
   padding: 6px 12px;
   border-radius: 100px;
   margin-right: 5px;
+  border: 1px solid var(--red-cs);
 }
 
 .storyTag:hover {
   color: white;
-  text-decoration: underline;
+  text-decoration: none;
+  background: var(--red-cs);
 }
 
 .contentContainer {
@@ -61,15 +83,17 @@
 
 .paragraphs {
   flex: 1 1 1px;
-  padding-top: 20px;
-  //padding-bottom: 20%;
-  padding-bottom: 50%;
+  padding: 20px 0 20px 1rem;
   overflow-y: auto;
 
   p {
-    font-size: 1.325rem;
     text-indent: 30px;
+    font-size: 1.125rem;
   }
+}
+
+.paragraphs div:last-child {
+  min-height: 100%;
 }
 
 .dots {
@@ -83,7 +107,7 @@
   height: 100%;
 
   .dotsRect {
-    width: 22px;
+    width: 20px;
     background: #ccc;
     margin: 4px 0;
     display: flex;
@@ -94,6 +118,7 @@
     transition: opacity var(--transition);
     flex: 1 1 10px;
     overflow: hidden;
+    border-radius: 10px;
     .dot {
       width: 8px;
       height: 8px;
@@ -105,5 +130,7 @@
 .attachments {
   overflow-y: auto;
   flex: 1 1 1px;
+  // padding: 20px 16px 20px 36px;
   padding: 20px 0;
+  background-color: rgba(204, 204, 204, 0.5);
 }
