added link to all pages in menu

--- a/src/components/Menu/Menu.module.scss
+++ b/src/components/Menu/Menu.module.scss
@@ -83,7 +83,7 @@
     border-bottom: 2px solid white;
   }
 
-  a:last-of-type {
+  a.secondary {
     font-family: "Besley", serif;
     font-style: italic;
   }
