--- a/src/pages/Camps/Camps.module.scss
+++ b/src/pages/Camps/Camps.module.scss
@@ -1,7 +1,7 @@
 .campsContainer {
   height: 100%;
   position: relative;
-  padding-top: calc(var(--menu-height) + 15px);
+  padding-top: calc(var(--menu-height));
   color: white;
   h1 {
     font-weight: normal;
@@ -10,4 +10,15 @@
   p {
     font-size: 0.875rem;
   }
+}
+
+.bkg {
+  padding-top: 15px;
+  background: linear-gradient(
+    to bottom,
+    rgba(0, 0, 0, 0.6) 0%,
+    rgba(0, 0, 0, 0) 100%
+  );
+  position: relative;
+  pointer-events: none;
 }
