--- a/src/pages/Camp/Camp.module.scss
+++ b/src/pages/Camp/Camp.module.scss
@@ -14,10 +14,41 @@
   border-top: 1px solid rgba(255, 255, 255, 0.5);
   border-bottom: 1px solid rgba(255, 255, 255, 0.5);
   margin-bottom: 25px;
+  position: relative;
+}
+
+.vertLabel {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%) rotate(-90deg);
+  z-index: 1;
+
+  h6 {
+    color: var(--red-cs);
+    font-weight: normal;
+    letter-spacing: 1px;
+    text-transform: uppercase;
+    font-size: 0.875rem;
+    margin: 0;
+  }
+}
+
+.vertLogo {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  left: 15px;
+  z-index: 1;
+  width: 20px;
+  height: 20px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .ddContainer {
   padding: 15px 0px;
+  position: relative;
 }
 
 .titleWrapper {
