--- a/src/pages/Icon/Icon.module.scss
+++ b/src/pages/Icon/Icon.module.scss
@@ -13,12 +13,17 @@
 .title {
   font-family: "Besley", serif;
   font-weight: normal;
-  font-size: 3rem;
+  font-size: 2.25rem;
 }
 
 .subtitle {
   font-weight: normal;
   margin: 0;
+
+  a {
+    color: black;
+    text-decoration: underline;
+  }
 }
 
 .circleButton {
@@ -46,13 +51,29 @@
 
 .descriptionContainer {
   flex: 1 1 1px;
-  overflow-y: scroll;
+  overflow: hidden;
   margin: 15px 0;
+  position: relative;
+  display: flex;
+}
+
+.descriptionContainer:after {
+  content: "";
+  pointer-events: none;
+  height: 100px;
+  position: absolute;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: linear-gradient(
+    0deg,
+    rgba(255, 255, 255, 1) 0%,
+    rgba(255, 255, 255, 0) 100%
+  );
 }
 
 .description {
-  font-size: 1.3rem;
-  line-height: 1.3;
+  font-size: 1.125rem;
   text-indent: 30px;
 }
 
