--- a/src/components/IntroPictures/IntroPictures.module.scss
+++ b/src/components/IntroPictures/IntroPictures.module.scss
@@ -14,7 +14,7 @@
   grid-template-rows: 1rem;
   position: relative;
   opacity: 0;
-  animation: fillingItems 20s ease-out forwards;
+  animation: fillingItems 20s ease-in-out forwards;
 }
 
 .grid {
@@ -41,7 +41,7 @@
   transform: translateX(-100%);
   pointer-events: none;
   filter: blur(1px);
-  transition: opacity 3s ease-out, transform 1.5s ease-out,
+  transition: opacity 3s ease-in-out, transform 1.5s ease-in-out,
     filter var(--transition);
 }
 
