--- a/src/pages/Story/Story.module.scss
+++ b/src/pages/Story/Story.module.scss
@@ -37,12 +37,15 @@
 
   .authorsCont {
     font-size: 0.875rem;
+    font-family: "Inter", sans-serif;
+    margin-top: 5px;
   }
 
   .authorsLabel {
     color: var(--red-cs);
     text-transform: uppercase;
     font-size: 0.75rem;
+    opacity: 0.5;
   }
 }
 
