--- a/src/pages/Camp/Camp.module.scss
+++ b/src/pages/Camp/Camp.module.scss
@@ -119,6 +119,6 @@
 }
 
 .networkContainer {
-  // max-width: 800px;
-  margin: 0 auto;
+  width: 100%;
+  height: calc(100vh - var(--menu-height));
 }
