--- a/src/pages/Camp/Camp.module.scss
+++ b/src/pages/Camp/Camp.module.scss
@@ -10,6 +10,10 @@
   position: relative;
 }
 
+.infoContainer {
+  padding-top: 15px;
+}
+
 .iconsContainer {
   border-top: 1px solid rgba(255, 255, 255, 0.5);
   border-bottom: 1px solid rgba(255, 255, 255, 0.5);
