--- a/src/pages/Story/Story.module.scss
+++ b/src/pages/Story/Story.module.scss
@@ -137,7 +137,7 @@
       width: 8px;
       height: 8px;
       border-radius: 10px;
-      background: #c82727;
+      background: #009ee3;
     }
   }
 }
