--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -26,7 +26,8 @@
 
 :root {
   --dark-cs: #101012;
-  --red-cs: #c82727;
+  // --red-cs: #009ee3;
+  --red-cs: #009ee3;
   --gray-cs: #d0d0d0;
   --transition: 0.3s ease-in-out;
   --menu-height: 60px;
