--- a/src/pages/Camp/Camp.module.scss
+++ b/src/pages/Camp/Camp.module.scss
@@ -58,7 +58,7 @@
 .titleWrapper {
   background: linear-gradient(
     to bottom,
-    rgba(0, 0, 0, 0.6) 0%,
+    rgba(0, 0, 0, 0.8) 0%,
     rgba(0, 0, 0, 0) 100%
   );
   position: relative;
@@ -84,7 +84,7 @@
 }
 
 .descriptionContainer {
-  max-height: 300px;
+  // max-height: 600px;
   display: flex;
   position: relative;
 }
